# graph-query-mcp

./: .gitignore  .mcp.json  README.md  graph-query-mcp.mcpb  manifest.json  pyproject.toml  requirements.txt  server.json  server.py
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: personal-pii-scrub.yml
hooks/: install-ping.py
tests/integration/: test_smoke.py
